@@ -111,12 +111,15 @@ config.status : $(srcdir)/configure
 $(srcdir)/configure : $(srcdir)/configure.ac
 	cd $(srcdir) && bash bootstrap
 
-install_kernel : $$__KERNEL__$$ kernel.img
+install_kernel : $$__KERNEL__$$ grub.img bochsrc
 	mkdir -p img
-	sudo mount -o loop kernel.img img
-	sudo cp halos img
-	sudo umount kernel.img
+	sudo mount -o loop grub.img img
+	sudo cp halos img/boot/
+	sudo umount img
 
-kernel.img : 
-	dd if=/dev/zero of=$@ bs=512 count=2880
-	sudo mke2fs -F -m 0 $@
+grub.img : $(srcdir)/bochs/grub.img.gz
+	gunzip -c $< > $@
+
+bochsrc : $(srcdir)/bochs/bochsrc
+	cp $< $@
+
